src/harness/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_after_final_agent_message.snap
---
source: src/harness/tui/src/chatwidget/tests.rs
expression: combined
---
↳ Interacted with background terminal · cargo test -p codex-agent
  └ (waited)

• Final response.
