src/harness/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__user_shell_ls_output.snap
---
source: src/harness/tui/src/chatwidget/tests.rs
expression: blob
---
• You ran ls
  └ file1
    file2
